tests/NormalTests/paczka1/fuzzy1/60357183.err
Error in line 9: U7lrPw0Rx A387 85,5
Error in line 3: cIC17 A387 98,5
Error in line 6: Hjn6cXYIl S379 75,5
Error in line 26: U7lrPw0Rx S379 5,7
Error in line 35: 8XlZJCFp8t A208 25,3
